<?xml version="1.0"?>
<package format="2">
  <name>commander_api</name>
  <version>0.1.0</version>
  <description>A client library for controlling the Inovo Modular Robot arm</description>
  <maintainer email="support@inovorobotics.com">Inovo Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>commander_msgs</depend>
  <depend>tf2</depend>

  <export>
  </export>
</package>
