<?xml version="1.0"?>
<package format="2">
  <name>inovo_driver_msgs</name>
  <version>0.1.0</version>
  <description>Messages and services used to interface with the inovo driver node</description>
  <maintainer email="support@inovorobotics.com">Inovo Robotics</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
