<?xml version="1.0"?>
<package format="2">
  <name>inovo_viz</name>
  <version>0.0.0</version>
  <description>The inovo_viz package</description>
  <maintainer email="support@inovorobotics.com">steve</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <export>
  </export>
</package>
