<?xml version="1.0"?>
<package format="2">
  <name>psu_msgs</name>
  <version>0.1.0</version>
  <description>The psu_msgs package</description>
  <maintainer email="support@inovorobotics.com">Inovo Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <export>
  </export>
</package>
